# blacknode-vision

./: .gitignore  AGENTS.md  README.md  blacknode-package.toml
.github/workflows/: ci.yml
components/camera/: README.md
components/camera/adapters/ros2/ros2_ws/src/perception_camera/: package.xml  setup.py
components/camera/adapters/ros2/ros2_ws/src/perception_camera/launch/: usb_camera.launch.py
components/camera/adapters/ros2/ros2_ws/src/perception_camera/perception_camera/: usb_camera.py
components/camera/nodes/: __init__.py  cv2_nodes.py  cv2_runtime.py
components/depth/: README.md
components/depth/adapters/: README.md
components/detection/: README.md
components/detection/adapters/: README.md
components/detection/nodes/: detection_nodes.py  detection_runtime.py
components/imu/: README.md
components/imu/adapters/: README.md
components/lidar/: README.md
components/localization/: README.md
components/slam/: README.md
components/tracking/: README.md
components/vlm/: README.md
nodes/: cv2_nodes.py  cv2_runtime.py  vision.py
scripts/: cv2_camera_stream_server.py  cv2_color_stream_server.py  setup.sh  vision_reasoning_stream_server.py
templates/: camera-to-motion-detection.json  camera-to-yolo-detection.json  vision-camera-console.json  vision-cv2-cube-local-reasoning.json  vision-cv2-cube-ros2-native-reasoning.json  vision-cv2-cube-rosbridge-reasoning.json  vision-frame-vlm.json  vision-live-vlm-reasoning.json
tests/: test_detection_nodes.py  test_ros2_camera.py  test_vision_nodes.py  test_vision_template_device_selection.py
(+17 files in other folders)
